[gd_scene load_steps=5 format=3 uid="uid://xmy011wfnfu3"]

[ext_resource type="Script" path="res://scenes/game_objects/sister/friend.gd" id="1_qnb2d"]
[ext_resource type="PackedScene" uid="uid://dv8x6p2p2hfaw" path="res://scenes/game_objects/sister/superstition_sister.tscn" id="2_o0nqu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4u0rl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3la7m"]
size = Vector3(1, 10, 15)

[node name="Friend" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 9
script = ExtResource("1_qnb2d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_4u0rl")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="SUPERSTITION_SISTER" parent="." instance=ExtResource("2_o0nqu")]

[node name="Skeleton3D" parent="SUPERSTITION_SISTER/Armature" index="0"]
bones/0/position = Vector3(6.75854, 6.40342, -125.712)
bones/0/rotation = Quaternion(-0.642666, 0.0487202, -0.0325523, 0.763903)
bones/1/rotation = Quaternion(0.0829547, -0.0175744, 0.00808956, 0.996365)
bones/2/rotation = Quaternion(0.107842, -0.0323754, 0.0168267, 0.993498)
bones/3/rotation = Quaternion(0.107685, -0.0337065, 0.0155755, 0.993491)
bones/4/rotation = Quaternion(-0.0188163, -0.0136994, 0.0117573, 0.99966)
bones/5/rotation = Quaternion(-0.244001, 0.0625487, -0.0164146, 0.967616)
bones/7/rotation = Quaternion(0.597578, 0.398604, -0.554694, 0.419916)
bones/8/rotation = Quaternion(0.258701, -0.0390244, 0.265658, 0.927888)
bones/9/rotation = Quaternion(-0.0157569, -0.0546241, 0.554371, 0.830326)
bones/11/rotation = Quaternion(0.653881, -0.322527, 0.583385, 0.357879)
bones/12/rotation = Quaternion(0.226589, -0.0181839, 0.189708, 0.955164)
bones/13/rotation = Quaternion(-0.0100041, 0.0372132, -0.524897, 0.850293)
bones/15/rotation = Quaternion(0.0735453, 0.163566, 0.980382, -0.0817814)
bones/16/rotation = Quaternion(-0.605194, 0.1321, -0.0537646, 0.783198)
bones/17/rotation = Quaternion(0.455444, -0.0508881, -0.064717, 0.88645)
bones/18/rotation = Quaternion(0.505025, -0.00588312, -0.0319654, 0.862492)
bones/20/rotation = Quaternion(-0.0486622, 0.380975, 0.920369, 0.0735672)
bones/21/rotation = Quaternion(-0.444011, 0.0598099, -0.00847803, 0.893983)
bones/22/rotation = Quaternion(0.515182, 0.0606322, 0.0283215, 0.854464)
bones/23/rotation = Quaternion(0.388633, 0.000149095, -0.000719755, 0.921392)

[node name="PlayerDeadzone" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDeadzone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 0)
shape = SubResource("BoxShape3D_3la7m")

[connection signal="body_entered" from="PlayerDeadzone" to="." method="_on_player_deadzone_body_entered"]

[editable path="SUPERSTITION_SISTER"]
